--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,17 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@quasar/vite-plugin": "^1.10.0",
     "@reown/appkit": "^1.8.15",
     "@reown/appkit-adapter-ethers": "^1.8.15",
     "@reown/appkit-adapter-wagmi": "^1.8.15",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@safe-global/safe-apps-sdk": "^9.1.0",
+    "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
+    "quasar": "^2.18.6",
     "viem": "^2.43.3",
+    "vue": "^3.5.26",
     "wagmi": "^3.1.2"
   }
 }
